welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting: error: not found: value hunt
		hunt(); 
                ^SlugHunting:2: error: not found: value hunt
hunt() 
^