welcome.lessons.welcome.methods.slug.SlugHunting.scala.code
hunt() 
{
	while (! isOverBaggle()) 
	{
		if (isFacingTrail())
		{
			brushDown();
			forward();
			brushUp();
		} 
		else
		{
			left();
		}
	}
		pickupBaggle();
}
	
def isFacingTrail():Boolean = 
{
	if (isFacingWall())
		return false;
	forward();
	var res = getGroundColor() == Color.green;
	backward();
	return res;
}
	
